# hackathon-trinity

./: .gitignore  API_REFERENCE.md  API_ROUTES.md  ARCHITECTURE.md  BACKEND_SETUP.md  GETTING_STARTED.md  INTEGRATION_SUMMARY.md  Implementation.md  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  START_HERE.md  docker-compose.supabase.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  page.tsx  prisma.config.ts  test-ai.ts  test-cerebras.js  test-modes.js  tsconfig.json
.claude/: launch.json
Brain/: Memory.md
api/: OWNERSHIP.md  pyproject.toml
api/synapse/: __init__.py  app.py  models.py
backend/: README.md  pyproject.toml  test_eval.py  test_eval2.py  uvicorn.err
backend/prisma/: schema.prisma
backend/prisma/migrations/20260529195451_add_classes/: migration.sql
backend/src/: fileParser.ts  mockSessions.ts  prisma.ts
backend/synapse/: app.py  models.py
backend/synapse/agents/: __init__.py  assessment.py  coordinator.py  diagnostic.py  lifecycle.py  notes.py  tutor.py
backend/synapse/mcp_server/: __init__.py  kb_server.py
backend/synapse/routers/: __init__.py  assess.py  diagnose.py  knowledge_map.py  memory.py  notes.py  tutor.py
backend/tests/: __init__.py  test_integration.py
frontend/: README.md  tsconfig.json
prisma/: dev.db.backup
scripts/: init-db.sh  test-backend.sh  verify-setup.js
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: Quiz.tsx  ai.ts  fileParser.ts  mockData.ts  prisma.ts  store.ts  synapseApi.ts
supabase/: .gitignore  config.toml
supabase/docker/: nginx.conf  seed_demo.sql
(+333 files in other folders)
