[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-ai"
version = "0.1.0"
description = "Synapse AI — personalized tutoring platform on ShyftLabs Continuum"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "reportlab>=4.2.0",
    "fastmcp>=2.0.0",
    "shyftlabs-continuum @ file:../continuum",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["synapse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
shyftlabs-continuum = { path = "../continuum", editable = true }
